Update README with instructions for running the application
From console and STS/Eclipse.